--- a/src/main/java/view/InputPanel.form
+++ b/src/main/java/view/InputPanel.form
@@ -16,11 +16,6 @@
           <text resource-bundle="Strings" key="openButtonLabel"/>
         </properties>
       </component>
-      <vspacer id="d3fec">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
       <component id="5c639" class="javax.swing.JTextField" binding="pathTextField">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -37,6 +32,24 @@
           <text resource-bundle="Strings" key="inputPathLabel"/>
         </properties>
       </component>
+      <scrollpane id="ebec7">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <enabled value="true"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="8ac04" class="javax.swing.JTextArea" binding="fileContent">
+            <constraints/>
+            <properties>
+              <editable value="false"/>
+              <enabled value="true"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
