--- a/src/main/java/view/InputPanel.form
+++ b/src/main/java/view/InputPanel.form
@@ -22,7 +22,9 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <editable value="false"/>
+        </properties>
       </component>
       <component id="5db66" class="javax.swing.JLabel">
         <constraints>
@@ -55,6 +57,7 @@
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <enabled value="false"/>
           <text resource-bundle="Strings" key="nextButton"/>
         </properties>
       </component>
